# Rust-vs-Cpp-for-CPU-and-GPU-Performance

./: .gitignore  Makefile  README.md  run_benchmarks.ps1
cpu/cpp/: CMakeLists.txt
cpu/cpp/include/: benchmark_utils.h
cpu/cpp/src/: binary_search.cpp  fft.cpp  hashmap.cpp  main.cpp  matmul.cpp  mergesort.cpp  nbody.cpp  parallel_reduction.cpp  quicksort.cpp
cpu/rust/: Cargo.toml
cpu/rust/benches/: cpu_benchmarks.rs
cpu/rust/src/: binary_search.rs  fft.rs  hashmap.rs  lib.rs  matmul.rs  mergesort.rs  nbody.rs  parallel_reduction.rs  quicksort.rs  utils.rs
datasets/: metadata.json
gpu/cpp/: CMakeLists.txt
gpu/cpp/src/: benchmark_runner.cu  conv2d_kernel.cu  matmul_kernel.cu  prefix_sum_kernel.cu  reduction_kernel.cu  softmax_kernel.cu
gpu/rust/: Cargo.toml
gpu/rust/kernels/: conv2d.cu  matmul.cu  matmul.ptx  prefix_sum.cu  reduction.cu  reduction.ptx  softmax.cu  softmax.ptx
gpu/rust/src/: main.rs
papers/: main.tex  paper.bib
results/raw/: analysis_summary.csv  analysis_table.tex  cpu_cpp.csv  cpu_gbench.json  cpu_rust.csv  gpu_analysis_summary.csv  gpu_analysis_table.tex  gpu_cpp.csv  gpu_rust.csv  safety_metrics.json
scripts/: analyze_results.py  asm_diff.sh  export_cpu_results_to_csv.py  generate_datasets.py  generate_gpu_table.py  generate_plots.py  requirements.txt  safety_analysis.py
